# Trust-ai-

./: .gitignore  .renderignore  .slugignore  DEPLOY.md  Procfile  README.md  main.py  manage.py  pyproject.toml  render.yaml  requirements.txt  setup.py
backend/: .env.example  main.py  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  speech-recognition.d.ts  types.ts
static/: index.html
