[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibetrust-backend"
version = "1.0.0"
description = "VibeTrust AI Guardian Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "google-generativeai==0.3.2",
    "python-dotenv==1.0.0",
]

[tool.setuptools]
py-modules = []
